switched to nvidia/cuda base image

--- a/conda_env.yml
+++ b/conda_env.yml
@@ -4,9 +4,14 @@ dependencies:
   - python=3.9
   - jupyter
   - jupyterlab
-  - pymc 
+  - pymc
+  - jax
   - arviz 
   - git 
   - pip
-  - "r-essentials==4.1.*"
+  - "r-essentials"
   - r-raster
+  - r-rgdal
+  - pip:
+    - ecoscope
+    - pyarrow
